[package]
name = "json-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[[bin]]
name = "rust"
path = "src/main.rs"
test = false
doctest = false

[lib]
test = true
doctest = false

[build]
rustflags = ["-A", "unused_imports"]
